test/param/ferguson/mismatched-param-type-error.good
mismatched-param-type-error.chpl:5: In function 'main':
mismatched-param-type-error.chpl:10: error: Cannot assign to borrowed G1(1) from borrowed G1(1:uint(64))
